# leptos-wasi-template

./: .gitignore  Cargo.toml  LICENSE  README.md  README.md.liquid  cargo-generate.toml  release.sh  serve.sh
src/: routes.rs  server.rs
src/pages/: home.rs
